--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Explore my portfolio showcasing diverse projects completed during the Whecodes workshops, highlighting my skills and creativity in web development."
+      content="Victoria Louise Steinwachs' portfolio featuring web development projects from SheCodes workshops. Explore apps like Yoga, Weather, and Yogurt."
     />
-    <title>Victoria Louise Steinwachs</title>
+    <title>Welcome to Victoria's Project Portfolio</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">[YOUR NAME]</a>
+        <a class="navbar-brand" href="index.html">Victoria Louise Steinwachs</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,23 +40,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="/index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="/about.html" title="About Me"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact" title="Contact Me"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">[YOUR NAME]</h1>
-    <h3 class="text-center">Front-end developer, based in [YOUR LOCATION]</h3>
+    <h1 class="text-center">Victoria Louise Steinwachs</h1>
+    <h3 class="text-center">
+      Front-end developer, based in Schleswig-Holstein, Germany
+    </h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="primary-link">Contact me</a>
       <a href="about.html" class="secondary-link">About me</a>
@@ -64,7 +70,11 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="images/yoga.jpg"
+            class="img-fluid rounded"
+            alt="Screenshot of a Yoga App"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -93,12 +103,20 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="images/weather.jpg"
+            class="img-fluid rounded"
+            alt="Screenshot of a Weather App"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.jpg"
+            class="img-fluid rounded"
+            alt="Screenshot of a Yogurt App"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -109,7 +127,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link">Launch Joghurt App</a>
           </div>
         </div>
       </div>
