--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>About [YOUR NAME]</title>
+    <title>About Victoria: My Journey in Web Development</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">[YOUR NAME]</a>
+        <a class="navbar-brand" href="index.html">Victoria Louise Steinwachs</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -39,22 +39,26 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a class="nav-link active" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <h1 class="text-center">About me</h1>
-    <h3 class="text-center">Front-end developer from [YOUR LOCATION]</h3>
+    <h3 class="text-center">
+      Front-end developer from Schleswig-Holstein, northern Germany
+    </h3>
     <div class="about-paragraphs text-center">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -66,19 +70,33 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yoga.jpg"
+            class="img-fluid p-2 shadow rounded"
+            alt="Screenshot of a Yoga App"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/weather.jpg"
+            class="img-fluid p-2 shadow rounded"
+            alt="Screenshot of a Weather App"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yogurt.jpg"
+            class="img-fluid p-2 shadow rounded"
+            alt="Screenshot of a Yoga App"
+          />
         </div>
       </div>
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:[YOUR EMAIL]" class="email-link"> [YOUR EMAIL] </a>
+      <a href="mailto:victoria.steinwachs@protonmail.com" class="email-link">
+        victoria.steinwachs@protonmail.com
+      </a>
     </div>
   </body>
 </html>
