--- a/index.html
+++ b/index.html
@@ -69,14 +69,10 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
-          <img
-            src="images/yoga.jpg"
-            class="img-fluid rounded"
-            alt="Screenshot of a Yoga App"
-          />
+        <div class="col-md-6">
+          <img src="images/yoga.jpg" class="img-fluid rounded img-mobile" />
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -90,7 +86,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-md-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -98,27 +94,19 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-5">
+          <div class="mb-5 mt-5">
             <a href="#" class="primary-link">Launch Weather App</a>
           </div>
         </div>
-        <div class="col-6">
-          <img
-            src="images/weather.jpg"
-            class="img-fluid rounded"
-            alt="Screenshot of a Weather App"
-          />
+        <div class="col-md-6">
+          <img src="images/weather.jpg" class="img-fluid rounded" />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
-          <img
-            src="images/yogurt.jpg"
-            class="img-fluid rounded"
-            alt="Screenshot of a Yogurt App"
-          />
+        <div class="col-md-6">
+          <img src="images/yogurt.jpg" class="img-fluid rounded img-mobile" />
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -127,10 +115,15 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Joghurt App</a>
+            <a href="#" class="primary-link">Launch Yogurt App</a>
           </div>
         </div>
       </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
