--- a/index.html
+++ b/index.html
@@ -45,12 +45,18 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html" title="About Me"
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="About Victoria Louise Steinwachs"
                 >About me</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact" title="Contact Me"
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Victoria Louise Steinwachs"
                 >Contact me</a
               >
             </li>
@@ -64,13 +70,27 @@
       Front-end developer, based in Schleswig-Holstein, Germany
     </h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a
+        href="about.html#contact"
+        class="primary-link"
+        title="Contact Victoria Louise Steinwachs"
+        >Contact me</a
+      >
+      <a
+        href="about.html"
+        class="secondary-link"
+        title="About Victoria Louise Steinwachs"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.jpg" class="img-fluid rounded img-mobile" />
+          <img
+            src="images/yoga.jpg"
+            class="img-fluid rounded img-mobile"
+            alt="Yoga Project"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -81,7 +101,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Yoga App Project"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -95,16 +117,26 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Weather App Project"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.jpg" class="img-fluid rounded" />
+          <img
+            src="images/weather.jpg"
+            class="img-fluid rounded"
+            alt="Weather App"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.jpg" class="img-fluid rounded img-mobile" />
+          <img
+            src="images/yogurt.jpg"
+            class="img-fluid rounded img-mobile"
+            alt="Yoghurt Project"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -115,7 +147,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yogurt App</a>
+            <a href="#" class="primary-link" title="Yoghurt App Project"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
