--- a/about.html
+++ b/about.html
@@ -26,7 +26,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Victoria Louise Steinwachs</a>
+        <a class="navbar-brand" href="/index.html"
+          >Victoria Louise Steinwachs</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -46,10 +48,20 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About me</a>
+              <a
+                class="nav-link active"
+                href="/about.html"
+                title="About Victoria Louise Steinwachs"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Victoria Louise Steinwachs"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -94,7 +106,11 @@
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:victoria.steinwachs@protonmail.com" class="email-link">
+      <a
+        href="mailto:victoria.steinwachs@protonmail.com"
+        class="email-link"
+        title="Victoria's Email Address"
+      >
         victoria.steinwachs@protonmail.com
       </a>
     </div>
