--- a/about.html
+++ b/about.html
@@ -84,21 +84,21 @@
         <div class="col-sm-4">
           <img
             src="images/yoga.jpg"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 shadow rounded mb-4"
             alt="Screenshot of a Yoga App"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/weather.jpg"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 shadow rounded mb-4"
             alt="Screenshot of a Weather App"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/yogurt.jpg"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 shadow rounded mb-4"
             alt="Screenshot of a Yoga App"
           />
         </div>
