--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="col-md-6">
           <img
             src="images/yoga.jpg"
-            class="img-fluid rounded img-mobile"
+            class="img-fluid rounded d-none d-sm-block"
             alt="Yoga Project"
           />
         </div>
@@ -101,7 +101,10 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Yoga App Project"
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="Yoga App Project"
               >Launch Yoga App</a
             >
           </div>
@@ -117,7 +120,10 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link" title="Weather App Project"
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="Weather App Project"
               >Launch Weather App</a
             >
           </div>
@@ -125,7 +131,7 @@
         <div class="col-md-6">
           <img
             src="images/weather.jpg"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="Weather App"
           />
         </div>
@@ -134,7 +140,7 @@
         <div class="col-md-6">
           <img
             src="images/yogurt.jpg"
-            class="img-fluid rounded img-mobile"
+            class="img-fluid rounded d-none d-sm-block"
             alt="Yoghurt Project"
           />
         </div>
@@ -147,7 +153,10 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Yoghurt App Project"
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="Yoghurt App Project"
               >Launch Yogurt App</a
             >
           </div>
