improve about page design

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Victoria Louise Steinwachs' portfolio featuring web development projects from SheCodes workshops. Explore apps like Yoga, Weather, and Yogurt."
+      content="Victoria Louise Steinwachs is an IT-project manager and aspiring frontend developer based in Schleswig-Holstein, northern Germany."
     />
-    <title>Welcome to Victoria's Project Portfolio</title>
+    <title>
+      Project manager and frontend developer Victoria Louise Steinwachs
+    </title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,13 +25,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Birthstone+Bounce:wght@400;500&family=Over+the+Rainbow&family=Rubik:ital,wght@0,300..900;1,300..900&family=Sorts+Mill+Goudy:ital@0;1&display=swap"
       rel="stylesheet"
     />
     <script
@@ -54,10 +50,10 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/index.html"
-                >Home</a
+                >HOME</a
               >
             </li>
             <li class="nav-item">
@@ -65,7 +61,7 @@
                 class="nav-link"
                 href="/about.html"
                 title="About Victoria Louise Steinwachs"
-                >About me</a
+                >ABOUT ME</a
               >
             </li>
             <li class="nav-item">
@@ -73,18 +69,17 @@
                 class="nav-link"
                 href="/about.html#contact"
                 title="Contact Victoria Louise Steinwachs"
-                >Contact me</a
+                >CONTACT ME</a
               >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <h2 class="text-center">👋 Hi I am</h2>
+    <h2 class="text-center">
+      PRODUCT OWNER WITH A PASSION FOR FRONTEND DEVELOPMENT
+    </h2>
     <h1 class="text-center">Victoria Louise Steinwachs</h1>
-    <h3 class="text-center">
-      Front-end developer, based in Schleswig-Holstein, Germany
-    </h3>
     <div class="navigation-links mb-5">
       <a
         href="about.html#contact"
