--- a/about.html
+++ b/about.html
@@ -20,6 +20,12 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Birthstone+Bounce:wght@400;500&family=Over+the+Rainbow&family=Rubik:ital,wght@0,300..900;1,300..900&family=Sorts+Mill+Goudy:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/0706468c63.js"
       crossorigin="anonymous"
@@ -48,7 +54,7 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/index.html"
-                >Home</a
+                >HOME</a
               >
             </li>
             <li class="nav-item">
@@ -56,7 +62,7 @@
                 class="nav-link active"
                 href="/about.html"
                 title="About Victoria Louise Steinwachs"
-                >About me</a
+                >ABOUT ME</a
               >
             </li>
             <li class="nav-item">
@@ -64,50 +70,39 @@
                 class="nav-link"
                 href="/about.html#contact"
                 title="Contact Victoria Louise Steinwachs"
-                >Contact me</a
+                >CONTACT ME</a
               >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <h1 class="text-center">About me</h1>
-    <h3 class="text-center">
-      Front-end developer from Schleswig-Holstein, northern Germany
-    </h3>
-    <div class="about-paragraphs text-center">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
-      </p>
-    </div>
-    <div class="container">
+    <div class="about-section container">
       <div class="row">
-        <div class="col-sm-4">
-          <img
-            src="images/yoga.jpg"
-            class="img-fluid p-2 shadow rounded mb-4"
-            alt="Screenshot of a Yoga App"
-          />
+        <div class="col-6 about-section-content">
+          <h1 class="text-start">Hi, it's me</h1>
+          <div class="about-paragraphs text-start">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+              aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+              qui alias veniam excepturi rem dolor fugit dignissimos, sed
+              voluptatum blanditiis harum.
+            </p>
+            <a href="" class="btn btn-outline-secondary contact-button"
+              >Contact Me</a
+            >
+          </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-6">
           <img
-            src="images/weather.jpg"
-            class="img-fluid p-2 shadow rounded mb-4"
-            alt="Screenshot of a Weather App"
-          />
-        </div>
-        <div class="col-sm-4">
-          <img
-            src="images/yogurt.jpg"
-            class="img-fluid p-2 shadow rounded mb-4"
-            alt="Screenshot of a Yoga App"
+            src="/images/Vicky3.png"
+            class="img-fluid d-none d-sm-block float-end about-img"
+            alt="Victoria drinking coffee"
           />
         </div>
       </div>
     </div>
+
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
       <a
