--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,6 @@
       name="description"
       content="Learn more about me and my journey in web development, including my experience with Whecodes workshops and my passion for creating innovative solutions."
     />
-
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,7 +30,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>About Victoria: My Journey in Web Development</title>
+    <title>Project Portfolio: My Journey in Web Development</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -78,9 +77,7 @@
       </div>
     </nav>
     <div class="content-container container">
-      <div class="row">
-        <div class="col-6 about-section-content">
-          <h1 class="text-start">Hi, it's me</h1>
+          <h1 class="text-start">My Projects</h1>
           <div class="content text-start">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -88,30 +85,11 @@
               qui alias veniam excepturi rem dolor fugit dignissimos, sed
               voluptatum blanditiis harum.
             </p>
-            <a href="" class="btn btn-outline-secondary contact-button"
-              >Contact Me</a
-            >
           </div>
         </div>
-        <div class="col-6">
-          <img
-            src="/images/Vicky3.png"
-            class="img-fluid d-none d-sm-block float-end about-img"
-            alt="Victoria drinking coffee"
-          />
+    
         </div>
       </div>
-    </div>
-
-    <div id="contact" class="mt-5">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a
-        href="mailto:victoria.steinwachs@protonmail.com"
-        class="email-link"
-        title="Victoria's Email Address"
-      >
-        victoria.steinwachs@protonmail.com
-      </a>
     </div>
   </body>
 </html>
