add coding projects and content

--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
             </li>
             <li class="nav-item">
               <a
+                class="nav-link active"
+                href="/projects.html"
+                title="About Victoria Louise Steinwachs"
+                >MY PROJECTS</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
                 class="nav-link"
                 href="/about.html#contact"
                 title="Contact Victoria Louise Steinwachs"
