--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Learn more about me and my journey in web development, including my experience with Whecodes workshops and my passion for creating innovative solutions."
+      content="Learn more about me and my journey in web development, including my experience with SheCodes workshops and my passion for creating innovative solutions."
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -66,6 +66,14 @@
             </li>
             <li class="nav-item">
               <a
+                class="nav-link active"
+                href="/projects.html"
+                title="Victoria's Projects"
+                >MY PROJECTS</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
                 class="nav-link"
                 href="/about.html#contact"
                 title="Contact Victoria Louise Steinwachs"
@@ -76,20 +84,126 @@
         </div>
       </div>
     </nav>
-    <div class="content-container container">
-          <h1 class="text-start">My Projects</h1>
-          <div class="content text-start">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-              aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-              qui alias veniam excepturi rem dolor fugit dignissimos, sed
-              voluptatum blanditiis harum.
-            </p>
-          </div>
+
+    <section class="container mt-5 pt-5">
+      <h1 class="text-start">My Projects</h1>
+      <p>
+        Three years ago, SheCodes sparked my curiosity, but my journey had to
+        wait as I immersed myself in Python and SQL for consulting. With a
+        background in art history and architecture, I knew a creative spark was
+        missing in my daily life. Rediscovering SheCodes felt like finding a
+        long-lost passion, and diving into the world of coding just made sense.
+      </p>
+
+      <div class="row mb-4">
+        <div class="col-6">
+          <img
+            src="images/Basic1.jpg"
+            class="img-fluid"
+            alt="Basic Project 1"
+          />
         </div>
-    
+        <div class="col-6">
+          <img
+            src="images/Basic2.jpg"
+            class="img-fluid"
+            alt="Basic Project 2"
+          />
         </div>
       </div>
-    </div>
+
+      <div class="row mb-4">
+        <h3>My Colorful Start with SheCodes, Rey, and Chewie by My Side</h3>
+        <p>
+          My first project was full of pastel colors that feel like home, and it
+          was so special to have Rey and Chewie cheering me on (from their
+          naps). It’s amazing how these colors have become a theme in my work,
+          and it all started here!
+        </p>
+      </div>
+
+      <div class="row mb-4">
+        <div class="col-6">
+          <h3>From Basics to CrossFit</h3>
+          <p>
+            The SheCodes Basic Add-on Course was the perfect push for me to take
+            coding to the next level! After already having so much fun with the
+            Basic Course, the Add-on allowed me to dive deeper into creating a
+            CrossFit-inspired project dedicated to my passion for sports and the
+            CrossFit community.I aimed to capture the sense of community and
+            support that I love about CrossFit in a digital form.
+          </p>
+        </div>
+        <div class="col-6">
+          <img
+            src="images/CrossFit.jpg"
+            class="img-fluid"
+            alt="CrossFit Project"
+          />
+        </div>
+      </div>
+
+      <div class="row mb-4">
+        <div class="col-6">
+          <img
+            src="images/WorldClock.jpg"
+            class="img-fluid"
+            alt="World Clock Project"
+          />
+        </div>
+        <div class="col-6">
+          <h3>Ticking Around the Globe</h3>
+          <p>
+            The World Clock project was a thrilling exploration of JavaScript
+            Date Formats and Time Zones! As we dove into the course, I was
+            captivated by how we can manipulate time in so many ways.
+            Understanding the intricacies of time zones opened up a whole new
+            world for me, enabling me to create a functional clock that connects
+            different parts of the globe.
+          </p>
+        </div>
+      </div>
+
+      <div class="row mb-4">
+        <div class="col-6">
+          <h3>Crafting My Weather App</h3>
+          <p>
+            I’m genuinely proud of what I’ve accomplished with this project!
+            Building my Weather App during the SheCodes Plus workshop has been
+            one of the most rewarding experiences of my coding journey. Watching
+            it come to life with real data felt magical, and the pastel tones
+            made it even more special.
+          </p>
+        </div>
+        <div class="col-6">
+          <img
+            src="images/WeatherApp.jpg"
+            class="img-fluid"
+            alt="Weather App Project"
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6">
+          <img
+            src="images/AiMealplanner.jpg"
+            class="img-fluid"
+            alt="AI Meal Planner Project"
+          />
+        </div>
+        <div class="col-6">
+          <h3>AI on My Plate</h3>
+          <p>
+            After taking a break from coding due to work commitments, I felt a
+            bit apprehensive about diving back in. But luckily, I quickly found
+            my footing again! With AI being such a hot topic these days, it was
+            exciting to explore its potential and create something impactful. As
+            someone who is passionate about CrossFit, proper nutrition is key to
+            my journey. This need inspired my project!
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
