--- a/about.html
+++ b/about.html
@@ -64,6 +64,14 @@
                 title="About Victoria Louise Steinwachs"
                 >ABOUT ME</a
               >
+                <li class="nav-item">
+              <a
+                class="nav-link active"
+                href="/projects.html"
+                title="About Victoria Louise Steinwachs"
+                >MY PROJECTS</a
+              >
+            </li>
             </li>
             <li class="nav-item">
               <a
