--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="/about.html#contact"
+                href="/contact.html"
                 title="Contact Victoria Louise Steinwachs"
                 >CONTACT ME</a
               >
