Add contact information

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>About Victoria: My Journey in Web Development</title>
+    <title>Contact Victoria</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -86,15 +86,24 @@
       </div>
     </nav>
 
-    <div id="contact" class="mt-5">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a
-        href="mailto:victoria.steinwachs@protonmail.com"
-        class="email-link"
-        title="Victoria's Email Address"
-      >
-        victoria.steinwachs@protonmail.com
-      </a>
+    <div class="content-container container">
+      <div class="row">
+        <div class="col-6 about-section-content">
+          <h1>Contact Me</h1>
+          <h2>Let's get in touch!</h2>
+          <p>Whether you're here for a chat, a collaboration, or just to say hi, I'd be happy to hear from you. Feel free to reach out however suits you best—email, LinkedIn, or even a carrier pigeon if you can find one. Just like in Rome, there’s always a way to connect!</p>
+<p>Feel free to reach out by email at 
+  <a 
+    href="mailto:victoria.steinwachs@protonmail.com" 
+    class="email-link" 
+    title="Victoria's Email Address"
+  >
+    victoria.steinwachs@protonmail.com
+  </a> — I’m always happy to connect!
+</p>
+<p>Or find me on <a href="https://www.linkedin.com/in/victoria-louise-steinwachs" target="_blank" rel="noopener noreferrer">LinkedIn</a> for professional inquiries.</p>
+        </div>
+       </div>
     </div>
   </body>
 </html>
