--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,9 @@
         missing in my daily life. Rediscovering SheCodes felt like finding a
         long-lost passion, and diving into the world of coding just made sense.
       </p>
+    </section>
 
+    <div class="content-container container">
       <div class="row mb-4">
         <div class="col-6">
           <img
@@ -204,6 +206,6 @@
           </p>
         </div>
       </div>
-    </section>
+    </div>
   </body>
 </html>
