--- a/about.html
+++ b/about.html
@@ -64,14 +64,15 @@
                 title="About Victoria Louise Steinwachs"
                 >ABOUT ME</a
               >
-                <li class="nav-item">
+            </li>
+
+            <li class="nav-item">
               <a
                 class="nav-link active"
                 href="/projects.html"
                 title="About Victoria Louise Steinwachs"
                 >MY PROJECTS</a
               >
-            </li>
             </li>
             <li class="nav-item">
               <a
@@ -87,7 +88,7 @@
     </nav>
     <div class="content-container container">
       <div class="row">
-        <div class="col-6 about-section-content">
+        <div class="col-6 content">
           <h1 class="text-start">Hi, it's me</h1>
           <div class="content text-start">
             <p>
