--- a/contact.html
+++ b/contact.html
@@ -64,14 +64,15 @@
                 title="About Victoria Louise Steinwachs"
                 >ABOUT ME</a
               >
-                <li class="nav-item">
+            </li>
+
+            <li class="nav-item">
               <a
                 class="nav-link active"
                 href="/projects.html"
                 title="About Victoria Louise Steinwachs"
                 >MY PROJECTS</a
               >
-            </li>
             </li>
             <li class="nav-item">
               <a
@@ -88,22 +89,44 @@
 
     <div class="content-container container">
       <div class="row">
-        <div class="col-6 about-section-content">
+        <div class="col-6 content">
           <h1>Contact Me</h1>
           <h2>Let's get in touch!</h2>
-          <p>Whether you're here for a chat, a collaboration, or just to say hi, I'd be happy to hear from you. Feel free to reach out however suits you best—email, LinkedIn, or even a carrier pigeon if you can find one. Just like in Rome, there’s always a way to connect!</p>
-<p>Feel free to reach out by email at 
-  <a 
-    href="mailto:victoria.steinwachs@protonmail.com" 
-    class="email-link" 
-    title="Victoria's Email Address"
-  >
-    victoria.steinwachs@protonmail.com
-  </a> — I’m always happy to connect!
-</p>
-<p>Or find me on <a href="https://www.linkedin.com/in/victoria-louise-steinwachs" target="_blank" rel="noopener noreferrer">LinkedIn</a> for professional inquiries.</p>
+          <p>
+            Whether you're here for a chat, a collaboration, or just to say hi,
+            I'd be happy to hear from you. Feel free to reach out however suits
+            you best — email, LinkedIn, or even a carrier pigeon 🕊️ if you can
+            find one. Just like in Rome, there’s always a way to connect!
+          </p>
+          <p>
+            Feel free to reach out by email at
+            <a
+              href="mailto:victoria.steinwachs@protonmail.com"
+              class="email-link"
+              title="Victoria's Email Address"
+              >victoria.steinwachs@protonmail.com
+            </a>
+            — I’m always happy to connect!
+          </p>
+          <p>
+            Or find me on
+            <a
+              href="https://www.linkedin.com/in/victoria-louise-steinwachs"
+              target="_blank"
+              rel="noopener noreferrer"
+              >LinkedIn
+            </a>
+            for professional inquiries.
+          </p>
         </div>
-       </div>
+        <div class="col-6 content">
+          <img
+            src="images/ThumbsUp.png"
+            class="img-fluid d-none d-sm-block float-end about-img"
+            alt="Victoria smiling in a winter coat and gloves, giving two thumbs up"
+          />
+        </div>
+      </div>
     </div>
   </body>
 </html>
