Adjust aria-current on all pages

--- a/projects.html
+++ b/projects.html
@@ -52,9 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html"
-                >HOME</a
-              >
+              <a class="nav-link" href="/index.html" title="Homepage">HOME </a>
             </li>
             <li class="nav-item">
               <a
@@ -68,6 +66,7 @@
               <a
                 class="nav-link active"
                 href="/projects.html"
+                aria-current="page"
                 title="Victoria's Projects"
                 >MY PROJECTS</a
               >
