--- a/about.html
+++ b/about.html
@@ -53,14 +53,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html"
-                >HOME</a
-              >
+              <a class="nav-link" href="/index.html" title="Homepage">HOME</a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link active"
                 href="/about.html"
+                aria-current="page"
                 title="About Victoria Louise Steinwachs"
                 >ABOUT ME</a
               >
@@ -70,7 +69,7 @@
               <a
                 class="nav-link active"
                 href="/projects.html"
-                title="About Victoria Louise Steinwachs"
+                title="Victoria's Projects"
                 >MY PROJECTS</a
               >
             </li>
