--- a/contact.html
+++ b/contact.html
@@ -53,9 +53,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html"
-                >HOME</a
-              >
+              <a class="nav-link" href="/index.html" title="Homepage">HOME</a>
             </li>
             <li class="nav-item">
               <a
@@ -70,7 +68,7 @@
               <a
                 class="nav-link active"
                 href="/projects.html"
-                title="About Victoria Louise Steinwachs"
+                title="Victoria's Projects"
                 >MY PROJECTS</a
               >
             </li>
@@ -78,6 +76,7 @@
               <a
                 class="nav-link"
                 href="/contact.html"
+                aria-current="page"
                 title="Contact Victoria Louise Steinwachs"
                 >CONTACT ME</a
               >
