--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/index.html"
+                title="Homepage"
                 >HOME</a
               >
             </li>
