build portfolio project header and adjust styling

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link active navigation-links"
                 aria-current="page"
                 href="/index.html"
                 title="Homepage"
@@ -62,7 +62,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link navigation-links"
                 href="/about.html"
                 title="About Victoria Louise Steinwachs"
                 >ABOUT ME</a
@@ -70,7 +70,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link navigation-links"
                 href="/projects.html"
                 title="About Victoria Louise Steinwachs"
                 >MY PROJECTS</a
@@ -78,7 +78,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link navigation-links"
                 href="/contact.html"
                 title="Contact Victoria Louise Steinwachs"
                 >CONTACT ME</a
@@ -88,10 +88,12 @@
         </div>
       </div>
     </nav>
+
     <h2 class="text-center">
       PRODUCT OWNER WITH A PASSION FOR FRONTEND DEVELOPMENT
     </h2>
     <h1 class="text-center">Victoria Louise Steinwachs</h1>
+
     <div class="navigation-links mb-5">
       <a
         href="about.html#contact"
@@ -100,12 +102,13 @@
         >Contact me</a
       >
       <a
-        href="about.html"
+        href="/about"
         class="secondary-link"
         title="About Victoria Louise Steinwachs"
         >About me</a
       >
     </div>
+
     <div class="container">
       <div class="row">
         <div class="col-md-6">
