--- a/projects.html
+++ b/projects.html
@@ -52,11 +52,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html" title="Homepage">HOME </a>
+              <a class="nav-link navigation-links" href="/index.html" title="Homepage">HOME </a>
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link navigation-links"
                 href="/about.html"
                 title="About Victoria Louise Steinwachs"
                 >ABOUT ME</a
@@ -64,7 +64,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link active navigation-links
                 href="/projects.html"
                 aria-current="page"
                 title="Victoria's Projects"
@@ -73,7 +73,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link navigation-links"
                 href="/contact.html"
                 title="Contact Victoria Louise Steinwachs"
                 >CONTACT ME</a
