--- a/about.html
+++ b/about.html
@@ -53,11 +53,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html" title="Homepage">HOME</a>
+              <a
+                class="nav-link navigation-links"
+                href="/index.html"
+                title="Homepage"
+                >HOME</a
+              >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link active navigation-links"
                 href="/about.html"
                 aria-current="page"
                 title="About Victoria Louise Steinwachs"
@@ -67,7 +72,7 @@
 
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link navigation-links"
                 href="/projects.html"
                 title="Victoria's Projects"
                 >MY PROJECTS</a
@@ -75,7 +80,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link navigation-links"
                 href="/contact.html"
                 title="Contact Victoria Louise Steinwachs"
                 >CONTACT ME</a
