--- a/index.html
+++ b/index.html
@@ -188,6 +188,33 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box">
+          <h4>Work Inquiry</h4>
+          <p>Let's work together</p>
+          <a href="" class="btn btn-branding"></a>Contact Me</a>
+        </div>
+        <a href="mailto:victoria.steinwachs@protonmail.com" class="email-link"
+          >victoria.steinwachs@protonmail.com</a
+        >
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.linkedin.com/in/victoria-louise-steinwachs"
+            target="_blank"
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/fit.paws.and.sea.views/"
+            target="_blank"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="https://github.com/vilouspics" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </div>
+      </footer>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
