Finish Portfolio Project / Footer

--- a/index.html
+++ b/index.html
@@ -189,12 +189,20 @@
         </div>
       </div>
       <footer>
-        <div class="contact-box">
-          <h4>Work Inquiry</h4>
-          <p>Let's work together</p>
-          <a href="" class="btn btn-branding"></a>Contact Me</a>
+        <div
+          class="contact-box d-flex align-items-center justify-content-around"
+        >
+          <div>
+            <h2>Work Inquiry</h3>
+            <p>Let's work together</p>
+          </div>
+          <div class="">
+            <a href="#" class="btn primary-link">Contact Me</a>
+          </div>
         </div>
-        <a href="mailto:victoria.steinwachs@protonmail.com" class="email-link"
+        <a
+          href="mailto:victoria.steinwachs@protonmail.com"
+          class="email-link mt-5"
           >victoria.steinwachs@protonmail.com</a
         >
         <div class="social-links d-flex justify-content-center">
