--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Victoria Louise Steinwachs is an IT-project manager and aspiring frontend developer based in Schleswig-Holstein, northern Germany."
+      content="Victoria Louise Steinwachs is an IT-Project Manager and aspiring Frontend Developer based in Schleswig-Holstein, northern Germany."
     />
     <title>
-      Project manager and frontend developer Victoria Louise Steinwachs
+      Product Owner and Frontend Developer Victoria Louise Steinwachs
     </title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -72,7 +72,7 @@
               <a
                 class="nav-link navigation-links"
                 href="/projects.html"
-                title="About Victoria Louise Steinwachs"
+                title="About Victoria Louise Steinwachs' projects"
                 >MY PROJECTS</a
               >
             </li>
@@ -94,22 +94,7 @@
     </h2>
     <h1 class="text-center">Victoria Louise Steinwachs</h1>
 
-    <div class="navigation-links mb-5">
-      <a
-        href="about.html#contact"
-        class="primary-link"
-        title="Contact Victoria Louise Steinwachs"
-        >Contact me</a
-      >
-      <a
-        href="/about"
-        class="secondary-link"
-        title="About Victoria Louise Steinwachs"
-        >About me</a
-      >
-    </div>
-
-    <div class="container">
+    <div class="container mt-5">
       <div class="row">
         <div class="col-md-6">
           <img
@@ -193,7 +178,7 @@
           class="contact-box d-flex align-items-center justify-content-around"
         >
           <div>
-            <h2>Work Inquiry</h3>
+            <h3>Work Inquiry</h3>
             <p>Let's work together</p>
           </div>
           <div class="">
@@ -209,19 +194,31 @@
           <a
             href="https://www.linkedin.com/in/victoria-louise-steinwachs"
             target="_blank"
+            title="LinkedIn Profile"
           >
             <i class="fa-brands fa-linkedin"></i>
           </a>
           <a
             href="https://www.instagram.com/fit.paws.and.sea.views/"
             target="_blank"
+            title="Instagram Profile"
           >
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="https://github.com/vilouspics" target="_blank">
+          <a
+            href="https://github.com/vilouspics"
+            target="_blank"
+            title="Github Profile"
+          >
             <i class="fa-brands fa-github"></i>
           </a>
         </div>
+        <p class="text-center mt-5">
+          This project was coded by Victoria Louise Steinwachs and is
+          <a href="https://github.com/vilouspics/My-project-portfolio">
+            open-sourced</a
+          >.
+        </p>
       </footer>
     </div>
     <script
