Include new img and improve media query

--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
     </nav>
     <div class="content-container container">
       <div class="row">
-        <div class="col-6 content">
+        <div class="col-12 col-md-6 content">
           <h1 class="text-start">Hi, it's me</h1>
           <div class="content text-start">
             <p>
@@ -106,10 +106,10 @@
             >
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-6 container d-flex align-items-end">
           <img
             src="/images/Vicky3.png"
-            class="img-fluid d-none d-sm-block float-end about-img"
+            class="img-fluid d-none d-sm-block float-end img-vicky"
             alt="Victoria drinking coffee"
           />
         </div>
