--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
 
     <div class="content-container container">
       <div class="row">
-        <div class="col-6 content">
+        <div class="col-12 col-md-6 content">
           <h1>Contact Me</h1>
           <h2>Let's get in touch!</h2>
           <p>
@@ -123,10 +123,10 @@
             for professional inquiries.
           </p>
         </div>
-        <div class="col-6 content">
+        <div class="col-6 container d-flex align-items-end">
           <img
-            src="images/ThumbsUp.png"
-            class="img-fluid d-none d-sm-block float-end about-img"
+            src="images/Vicky4.PNG"
+            class="img-fluid d-none d-sm-block float-end img-vicky"
             alt="Victoria smiling in a winter coat and gloves, giving two thumbs up"
           />
         </div>
