--- a/projects.html
+++ b/projects.html
@@ -84,9 +84,9 @@
       </div>
     </nav>
 
-    <section class="container mt-5 pt-5">
+    <section class="container content-container mt-5 pt-5">
       <h1 class="text-start">My Projects</h1>
-      <p>
+      <p class="mt-5">
         Three years ago, SheCodes sparked my curiosity, but my journey had to
         wait as I immersed myself in Python and SQL for consulting. With a
         background in art history and architecture, I knew a creative spark was
@@ -95,7 +95,7 @@
       </p>
     </section>
 
-    <div class="content-container container">
+    <div class="container">
       <div class="row mb-4">
         <div class="col-6">
           <img
