--- a/index.html
+++ b/index.html
@@ -89,138 +89,81 @@
       </div>
     </nav>
 
-    <h2 class="text-center">
-      PRODUCT OWNER WITH A PASSION FOR FRONTEND DEVELOPMENT
-    </h2>
-    <h1 class="text-center">Victoria Louise Steinwachs</h1>
-
-    <div class="container mt-5">
+    <div class="content-container container">
       <div class="row">
-        <div class="col-md-6">
-          <img
-            src="images/yoga.jpg"
-            class="img-fluid rounded d-none d-sm-block"
-            alt="Yoga Project"
-          />
-        </div>
-        <div class="col-md-6">
-          <h2 class="mb-3">Yoga app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+        <div class="col-12 col-md-6 content introduction-content">
+          <h2 class="text-center">
+            PRODUCT OWNER WITH A PASSION FOR FRONTEND DEVELOPMENT
+          </h2>
+          <h1 class="text-center mt-5">Victoria Louise Steinwachs</h1>
+          <p class="introduction-paragraph">
+            Welcome! I'm Victoria, a creative spirit with a heart for people, furry friends and
+            a passion for holistic health and design. After years in the
+            bustling city of Berlin, I’ve found my way to the serene coast of
+            Schleswig-Holstein, embracing a life of mindfulness, thoughtful
+            design, and intentional living. </br> When I’m not coding or developing
+            creative projects, you’ll find me at the coast with my dogs or in a
+            CrossFit gym. Let’s discover together how to bring balance and
+            artistry into a busy world!
           </p>
-          <div class="mt-5">
-            <a
-              href="#"
-              class="primary-link project-link"
-              title="Yoga App Project"
-              >Launch Yoga App</a
-            >
-          </div>
         </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-md-6">
-          <h2 class="mb-3">Weather app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mb-5 mt-5">
-            <a
-              href="#"
-              class="primary-link project-link"
-              title="Weather App Project"
-              >Launch Weather App</a
-            >
-          </div>
-        </div>
-        <div class="col-md-6">
+        <div class="col-6 container d-flex align-items-end">
           <img
-            src="images/weather.jpg"
-            class="img-fluid rounded d-none d-sm-block"
-            alt="Weather App"
+            src="/images/Vicky5.png"
+            class="img-fluid d-none d-sm-block float-end img-vicky"
+            alt="Victoria and her Vizsla Chewie"
           />
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-md-6">
-          <img
-            src="images/yogurt.jpg"
-            class="img-fluid rounded d-none d-sm-block"
-            alt="Yoghurt Project"
-          />
-        </div>
-        <div class="col-md-6">
-          <h2 class="mb-3">Yogurt app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a
-              href="#"
-              class="primary-link project-link"
-              title="Yoghurt App Project"
-              >Launch Yogurt App</a
-            >
-          </div>
-        </div>
-      </div>
-      <footer>
-        <div
-          class="contact-box d-flex align-items-center justify-content-around"
-        >
-          <div>
-            <h3>Work Inquiry</h3>
-            <p>Let's work together</p>
-          </div>
-          <div class="">
-            <a href="#" class="btn primary-link">Contact Me</a>
-          </div>
-        </div>
-        <a
-          href="mailto:victoria.steinwachs@protonmail.com"
-          class="email-link mt-5"
-          >victoria.steinwachs@protonmail.com</a
-        >
-        <div class="social-links d-flex justify-content-center">
-          <a
-            href="https://www.linkedin.com/in/victoria-louise-steinwachs"
-            target="_blank"
-            title="LinkedIn Profile"
-          >
-            <i class="fa-brands fa-linkedin"></i>
-          </a>
-          <a
-            href="https://www.instagram.com/fit.paws.and.sea.views/"
-            target="_blank"
-            title="Instagram Profile"
-          >
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a
-            href="https://github.com/vilouspics"
-            target="_blank"
-            title="Github Profile"
-          >
-            <i class="fa-brands fa-github"></i>
-          </a>
-        </div>
-        <p class="text-center mt-5">
-          This project was coded by Victoria Louise Steinwachs and is
-          <a href="https://github.com/vilouspics/My-project-portfolio">
-            open-sourced</a
-          >.
-        </p>
-      </footer>
     </div>
+
+    <footer>
+      <div
+        class="content-container d-flex align-items-center justify-content-around"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p>Let's work together</p>
+        </div>
+        <div class="">
+          <a href="#" class="btn primary-link">Contact Me</a>
+        </div>
+      </div>
+      <a
+        href="mailto:victoria.steinwachs@protonmail.com"
+        class="email-link mt-5"
+        >victoria.steinwachs@protonmail.com</a
+      >
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.linkedin.com/in/victoria-louise-steinwachs"
+          target="_blank"
+          title="LinkedIn Profile"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a
+          href="https://www.instagram.com/fit.paws.and.sea.views/"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a
+          href="https://github.com/vilouspics"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </div>
+      <p class="text-center mt-5">
+        This project was coded by Victoria Louise Steinwachs and is
+        <a href="https://github.com/vilouspics/My-project-portfolio">
+          open-sourced</a
+        >.
+      </p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
